Finished the layout.

--- a/TwinsArtstyle/Views/Shared/_Layout.html
+++ b/TwinsArtstyle/Views/Shared/_Layout.html
@@ -27,6 +27,22 @@
             </ul>
         </nav>
     </header>
+    <div class="categories">
+        <ul id="categories-container">
+            <li class="category-item">
+                <a href="#" class="category">Home</a>
+            </li>
+            <li class="category-item">
+                <a href="#" class="category">Принтове</a>
+            </li>
+            <li class="category-item">
+                <a href="#" class="category">Платна</a>
+            </li>
+            <li class="category-item">
+                <a href="#" class="category">Рисунки</a>
+            </li>
+        </ul>
+    </div>
         
         <!-- Space for partial views-->
 
