Finished the 'Welcome' page.

--- a/TwinsArtstyle/Views/Home/Index.cshtml
+++ b/TwinsArtstyle/Views/Home/Index.cshtml
@@ -1,8 +1,18 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+@{
+    ViewData["Title"] = "Welcome to our store!";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+<div id="welcoming">
+    <span class="head text">
+        Добре дошли в нашия магазин!
+    </span>
+    <br>
+    <span class="main-text text">Тук можете да намерите най-невероятния и уникален подарък за Ваш:</span>
+    <img id="twins-drawing" src="~/images/twins.png" alt="twins-drawing">
+    <ul>
+        <li class="text">Приятел</li>
+        <li class="text">Роднина</li>
+        <li class="text">Учител</li>
+    </ul>
+
 </div>
