--- a/TwinsArtstyle/Views/Home/Index.cshtml
+++ b/TwinsArtstyle/Views/Home/Index.cshtml
@@ -1,18 +1,18 @@
 @{
-    ViewData["Title"] = "Welcome to our store!";
+    ViewData["Title"] = "Twins Artstyle - Рисунки за всички";
 }
 
 <div id="welcoming">
-    <span class="head text">
+    <span class="head main-text">
         Добре дошли в нашия магазин!
     </span>
     <br>
-    <span class="main-text text">Тук можете да намерите най-невероятния и уникален подарък за Ваш:</span>
+    <span class="main-text">Тук можете да намерите най-невероятния и уникален подарък за Ваш:</span>
     <img id="twins-drawing" src="~/images/twins.png" alt="twins-drawing">
     <ul>
-        <li class="text">Приятел</li>
-        <li class="text">Роднина</li>
-        <li class="text">Учител</li>
+        <li class="main-text">Приятел</li>
+        <li class="main-text">Роднина</li>
+        <li class="main-text">Учител</li>
     </ul>
 
 </div>
