--- a/TwinsArtstyle/wwwroot/css/Layout.css
+++ b/TwinsArtstyle/wwwroot/css/Layout.css
@@ -26,6 +26,7 @@ body{
     background-image: url("../images/heading-background.png");
     background-repeat: repeat;
     background-size: contain;
+    width: 100%;
 }
 
 .top-list-container{
@@ -49,7 +50,6 @@ body{
     font-family: 'Sansita Swashed', cursive;
     font-size: 50px;
     letter-spacing: 6px;
-    
 }
 
 .top-cart-button{
