--- a/TwinsArtstyle/Views/Shared/_Layout.cshtml
+++ b/TwinsArtstyle/Views/Shared/_Layout.cshtml
@@ -35,7 +35,7 @@
         <div class="categories">
             <ul id="categories-container">
                 <li class="category-item">
-                    <a asp-controller="Home" asp-action="Index" class="category">Home</a>
+                    <a asp-controller="Home" asp-action="Index" class="category animate-background-color">Home</a>
                 </li>
                 <li class="category-item">
                     <a asp-controller="Home" asp-action="Index" class="category animate-background-color">Принтове</a>
@@ -49,7 +49,9 @@
             </ul>
         </div>
 
-        @RenderBody();
+        <div class="content-wrapper">
+            @RenderBody()
+        </div>
 
         <footer>
             <nav id="bottom-nav-bar">
