--- a/TwinsArtstyle/wwwroot/css/Layout.css
+++ b/TwinsArtstyle/wwwroot/css/Layout.css
@@ -15,8 +15,13 @@
 }
 
 body{
+    position: relative;
     background-color: var(--blue);
     min-height: 100vh;
+}
+
+.content-wrapper{
+   padding-bottom: 110px;
 }
 
 .top-navigation-bar{
@@ -107,8 +112,8 @@ body{
 }
 
 footer{
-    position: sticky;
-    top: 100%;
+    position: absolute;
+    bottom: 0;
     width: 100%;
     height:110px;
     background-color: var(--light-blue);
