Fixed some of the class names for the html elements.

--- a/TwinsArtstyle/Views/Home/About.cshtml
+++ b/TwinsArtstyle/Views/Home/About.cshtml
@@ -1,25 +1,25 @@
 <div class="about-contact-card">
-    <div class="about-us">
-        <span class="about-text text">
+    <div class="about-us-container">
+        <span class="about-text">
             Здравейте ние сме Twins.artstyle.
 Това е нашият сайт, пълен с уникални рисунки и изделия на изкуството, направени с много любов и внимание, за да могат да зарадват някой от Вас!
 Нашата работа е да вдъхновяваме повече хора да се занимават с изкуство и да не вярват на твърдението, че в България художниците не могат да се развиват. 
         </span> 
     </div>
     <div class="contacts">
-        <p class="text">Contacts:</p>
+        <p class="about-text">Contacts:</p>
         <ul id="contact-list">
             <li>
                 <i class="bi bi-instagram icon"></i>
-                <a href="https://instagram.com/twins.artstyle" id="instagram" class="text">Instagram</a>
+                <a href="https://instagram.com/twins.artstyle" id="instagram" class="about-text">Instagram</a>
             </li>
             <li>
                 <i class="bi bi-youtube icon"></i>
-                <a href="https://tiktok.com/@@twins.artstyle" id="tiktok" class="text">Tik Tok</a>
+                <a href="https://tiktok.com/@@twins.artstyle" id="tiktok" class="about-text">Tik Tok</a>
             </li>
             <li>
                 <i class="bi bi-tiktok icon"></i>
-                <a href="https://www.youtube.com/channel/UCJtzDsElImMmzkwrWbjISUg" id="youtube" class="text">Youtube</a>
+                <a href="https://www.youtube.com/channel/UCJtzDsElImMmzkwrWbjISUg" id="youtube" class="about-text">Youtube</a>
             </li>
         </ul>
     </div>
