--- a/TwinsArtstyle/Views/Home/Index.cshtml
+++ b/TwinsArtstyle/Views/Home/Index.cshtml
@@ -2,16 +2,16 @@
     ViewData["Title"] = "Twins Artstyle - Рисунки за всички";
 }
 
-<div id="welcoming">
-    <span class="head main-text">
+<div id="welcome">
+    <span class="head welcome-main-text">
         Добре дошли в нашия магазин!
     </span>
     <br>
-    <span class="main-text">Тук можете да намерите най-невероятния и уникален подарък за Ваш:</span>
+    <span class="welcome-main-text">Тук можете да намерите най-невероятния и уникален подарък за Ваш:</span>
     <img id="twins-drawing" src="~/images/twins.png" alt="twins-drawing">
     <ul>
-        <li class="main-text">Приятел</li>
-        <li class="main-text">Роднина</li>
-        <li class="main-text">Учител</li>
+        <li class="welcome-main-text">Приятел</li>
+        <li class="welcome-main-text">Роднина</li>
+        <li class="welcome-main-text">Учител</li>
     </ul>
 </div>
