--- a/TwinsArtstyle/Views/Shared/_Layout.cshtml
+++ b/TwinsArtstyle/Views/Shared/_Layout.cshtml
@@ -32,6 +32,7 @@
         <div class="categories">
             <ul id="categories-container">
                 <li class="category-item">
+                    <i class="bi bi-house-door-fill"></i>
                     <a asp-controller="Home" asp-action="Index" class="category animate-background-color">Home</a>
                 </li>
                 <li class="category-item">
@@ -68,5 +69,7 @@
                 </ul>
             </nav>
         </footer>
+
+        @await RenderSectionAsync("Scripts", false)
 </body>
 </html>
