--- a/TwinsArtstyle/wwwroot/css/site.css
+++ b/TwinsArtstyle/wwwroot/css/site.css
@@ -68,7 +68,7 @@ li.about-text{
     padding-right: 10px;
 }
 
-.login-card{
+.card{
     font-family: "Comic Sans MS";
     position: relative;
     top: 50px;
@@ -83,7 +83,22 @@ li.about-text{
     gap: 3px;
 }
 
-.login-card > h2{
+/* .login-card{
+    font-family: "Comic Sans MS";
+    position: relative;
+    top: 50px;
+    width: 20%;
+    margin: 0 auto;
+    background-color: white;
+    padding: 30px;
+    border-radius: 20px;
+    box-shadow: 2px 2px 10px #333;
+    display: flex;
+    flex-direction: column;
+    gap: 3px;
+} */
+
+.card > h2{
     text-align: center;
     font-size: 35px;
 }
@@ -107,11 +122,11 @@ li.about-text{
     background-color: #eee;
 }
 
-.button-container{
+.submit-button-container{
     margin-top: 15px;
 }
 
-#login-submit{
+.submit{
     padding: 5px 10px;
     font-size: 24px;
     width: 100%;
@@ -122,7 +137,7 @@ li.about-text{
     color: white;
 }
 
-#login-submit:hover{
+.submit:hover{
     background-color: #346E75;
     cursor: pointer;
 }
