--- a/TwinsArtstyle/wwwroot/css/site.css
+++ b/TwinsArtstyle/wwwroot/css/site.css
@@ -15,14 +15,15 @@ li.welcome-main-text{
 
 li.about-text{
     margin-left: 50px;
-  }
+}
   
 #twins-drawing{
     width: auto;
-    height: 200px;
+    height: 400px;
     display: inline;
-    position: relative;
+    position: absolute;
     left: 50%;
+    top: 48%;
 }
 
 .about-contact-card{
@@ -82,21 +83,6 @@ li.about-text{
     flex-direction: column;
     gap: 3px;
 }
-
-/* .login-card{
-    font-family: "Comic Sans MS";
-    position: relative;
-    top: 50px;
-    width: 20%;
-    margin: 0 auto;
-    background-color: white;
-    padding: 30px;
-    border-radius: 20px;
-    box-shadow: 2px 2px 10px #333;
-    display: flex;
-    flex-direction: column;
-    gap: 3px;
-} */
 
 .card > h2{
     text-align: center;
