Fixed the instant logout issue after trying to log in instantly after you logged out by always redirecting to the home page after a log in and ignoring the returnUrl value.

--- a/TwinsArtstyle/wwwroot/css/Layout.css
+++ b/TwinsArtstyle/wwwroot/css/Layout.css
@@ -100,11 +100,13 @@ body{
 }
 
 .category{
+    padding: 4px;
     text-decoration: none;
     color: #333;
     font-family: 'Courier New', Courier, monospace;
     font-size: 30px;
     transition: color 500ms;
+    border-radius: 8px;
 }
 
 .category:hover{
