--- a/TwinsArtstyle/Views/Shared/_Layout.cshtml
+++ b/TwinsArtstyle/Views/Shared/_Layout.cshtml
@@ -41,12 +41,15 @@
                 <a asp-controller="Home" asp-action="Index" class="category animate-background-color">Home</a>
             </li>
             <li class="category-item">
+                <i class="bi bi-printer-fill"></i>
                 <a asp-controller="Home" asp-action="Index" class="category animate-background-color">Принтове</a>
             </li>
             <li class="category-item">
+                <i class="bi bi-calendar"></i>
                 <a asp-controller="Home" asp-action="Index" class="category animate-background-color">Платна</a>
             </li>
             <li class="category-item">
+                <i class="bi bi-brush-fill"></i>
                 <a asp-controller="Home" asp-action="Index" class="category animate-background-color">Рисунки</a>
             </li>
         </ul>
@@ -73,8 +76,9 @@
             </ul>
         </nav>
     </footer>
-
-    <script src="~/js/site.js" defer></script>
+    <script src="~/lib/jquery/dist/jquery.min.js"></script>
+    <script src="~/lib/bootstrap/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="~/js/site.js"></script>
     @await RenderSectionAsync("Scripts", false)
 </body>
 </html>
