Added a partial view for a single product

--- a/TwinsArtstyle/Areas/Identity/Pages/Account/Register.cshtml
+++ b/TwinsArtstyle/Areas/Identity/Pages/Account/Register.cshtml
@@ -4,7 +4,7 @@
     ViewData["Title"] = "Register";
 }
 
-<div class="register-card card">
+<div class="register-card account-card">
     <h2>@ViewData["Title"]</h2>
     <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
             <h2>Create a new account.</h2>
