--- a/TwinsArtstyle/Areas/Identity/Pages/Account/Login.cshtml
+++ b/TwinsArtstyle/Areas/Identity/Pages/Account/Login.cshtml
@@ -5,7 +5,7 @@
     ViewData["Title"] = "Log in";
 }
 
-<div class="login-card card">
+<div class="login-card account-card">
     <h2>@ViewData["Title"]</h2>
     <form id="account" method="post">
         <div class="form-floating">
