--- a/TwinsArtstyle/Areas/Identity/Pages/_ViewImports.cshtml
+++ b/TwinsArtstyle/Areas/Identity/Pages/_ViewImports.cshtml
@@ -1,4 +1,5 @@
-﻿@using Microsoft.AspNetCore.Identity
+@using Microsoft.AspNetCore.Identity
 @using TwinsArtstyle.Areas.Identity
 @using TwinsArtstyle.Areas.Identity.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
+@using TwinsArtstyle.Infrastructure.Models
