--- a/TwinsArtstyle/Views/_ViewImports.cshtml
+++ b/TwinsArtstyle/Views/_ViewImports.cshtml
@@ -1,3 +1,4 @@
 ﻿@using TwinsArtstyle
+@using TwinsArtstyle.Services.ViewModels
 @using TwinsArtstyle.Models
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
