--- a/TwinsArtstyle/Views/User/Login.cshtml
+++ b/TwinsArtstyle/Views/User/Login.cshtml
@@ -1,5 +1,4 @@
-﻿@page
-@model LoginModel
+﻿@model LoginViewModel
 
 @{
     ViewData["Title"] = "Log in";
@@ -7,22 +6,22 @@
 
 <div class="login-card account-card">
     <h2>@ViewData["Title"]</h2>
-    <form id="account" method="post">
+    <form asp-controller="User" asp-action="Login" method="post">
         <div class="form-floating">
-            <label asp-for="Input.Email" class="form-label"></label>
-            <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-            <span asp-validation-for="Input.Email" class="text-danger"></span>
+            <label asp-for="Email" class="form-label"></label>
+            <input asp-for="Email" class="form-control" autocomplete="username" aria-required="true" />
+            <span asp-validation-for="Email" class="text-danger"></span>
         </div>
         <div class="form-floating">
-            <label asp-for="Input.Password" class="form-label"></label>
-            <input asp-for="Input.Password" class="form-control" autocomplete="current-password" aria-required="true" />
-            <span asp-validation-for="Input.Password" class="text-danger"></span>
+            <label asp-for="Password" class="form-label"></label>
+            <input asp-for="Password" class="form-control" autocomplete="current-password" aria-required="true" />
+            <span asp-validation-for="Password" class="text-danger"></span>
         </div>
         <div>
             <div class="checkbox">
-                <label asp-for="Input.RememberMe" class="form-label">
-                    <input class="form-check-input" asp-for="Input.RememberMe" />
-                    @Html.DisplayNameFor(m => m.Input.RememberMe)
+                <label asp-for="RememberMe" class="form-label">
+                    <input class="form-check-input" asp-for="RememberMe" />
+                    @Html.DisplayNameFor(m => m.RememberMe)
                 </label>
             </div>
         </div>
@@ -32,7 +31,7 @@
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div>
             <p>
-                <a id="register-new-user" asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                <a id="register-new-user" asp-controller="User" asp-action="Register">Register as a new user</a>
             </p>
         </div>
     </form>
