--- a/TwinsArtstyle/Views/User/Register.cshtml
+++ b/TwinsArtstyle/Views/User/Register.cshtml
@@ -1,29 +1,28 @@
-﻿@page
-@model RegisterModel
+﻿@model RegisterViewModel
 @{
     ViewData["Title"] = "Register";
 }
 
 <div class="register-card account-card">
     <h2>@ViewData["Title"]</h2>
-    <form id="registerForm" asp-route-returnUrl="@Model.ReturnUrl" method="post">
+    <form id="registerForm" asp-route-returnUrl="" method="post">
             <h2>Create a new account.</h2>
             <hr />
             <br />
             <div class="form-floating">
-                <label asp-for="Input.Email"></label>
-                <input asp-for="Input.Email" class="form-control" autocomplete="username" aria-required="true" />
-                <span asp-validation-for="Input.Email" class="text-danger"></span>
+                <label asp-for="Email"></label>
+                <input asp-for="Email" class="form-control" autocomplete="username" aria-required="true" />
+                <span asp-validation-for="Email" class="text-danger"></span>
             </div>
             <div class="form-floating">
-                <label asp-for="Input.Password"></label>
-                <input asp-for="Input.Password" class="form-control" autocomplete="new-password" aria-required="true" />
-                <span asp-validation-for="Input.Password" class="text-danger"></span>
+                <label asp-for="Password"></label>
+                <input asp-for="Password" class="form-control" autocomplete="new-password" aria-required="true" />
+                <span asp-validation-for="Password" class="text-danger"></span>
             </div>
             <div class="form-floating">
-                <label asp-for="Input.ConfirmPassword"></label>
-                <input asp-for="Input.ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
-                <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
+                <label asp-for="ConfirmPassword"></label>
+                <input asp-for="ConfirmPassword" class="form-control" autocomplete="new-password" aria-required="true" />
+                <span asp-validation-for="ConfirmPassword" class="text-danger"></span>
             </div>
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="submit-button-container">
