Added 2 Areas into the project (Admin area and Main area) changed the folder structure and added routes for the specified areas.

--- a/TwinsArtstyle/Areas/Main/Views/Shared/_Layout.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/Shared/_Layout.cshtml
@@ -38,19 +38,19 @@
         <ul id="categories-container">
             <li class="category-item">
                 <i class="bi bi-house-door-fill"></i>
-                <a asp-controller="Home" asp-action="Index" class="category animate-background-color">Home</a>
+                <a asp-area="Main" asp-controller="Home" asp-action="Index" class="category animate-background-color">Home</a>
             </li>
             <li class="category-item">
                 <i class="bi bi-printer-fill"></i>
-                <a asp-controller="Home" asp-action="Index" class="category animate-background-color">Принтове</a>
+                <a asp-area="Main" asp-controller="Home" asp-action="Index" class="category animate-background-color">Принтове</a>
             </li>
             <li class="category-item">
                 <i class="bi bi-calendar"></i>
-                <a asp-controller="Home" asp-action="Index" class="category animate-background-color">Платна</a>
+                <a asp-area="Main" asp-controller="Home" asp-action="Index" class="category animate-background-color">Платна</a>
             </li>
             <li class="category-item">
                 <i class="bi bi-brush-fill"></i>
-                <a asp-controller="Home" asp-action="Index" class="category animate-background-color">Рисунки</a>
+                <a asp-area="Main" asp-controller="Home" asp-action="Index" class="category animate-background-color">Рисунки</a>
             </li>
         </ul>
     </div>
@@ -65,7 +65,7 @@
                     <a class="bottom-link" href="#">Contact Us</a>
                 </li>
                 <li>
-                    <a class="bottom-link" asp-controller="Home" asp-action="About">About Us</a>
+                    <a class="bottom-link" asp-area="Main" asp-controller="Home" asp-action="About">About Us</a>
                 </li>
                 <li>
                     <a class="bottom-link" href="#">Terms of Service</a>
