--- a/TwinsArtstyle/Areas/Main/Views/User/Login.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/User/Login.cshtml
@@ -31,7 +31,7 @@
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
         <div>
             <p>
-                <a id="register-new-user" asp-controller="User" asp-action="Register">Register as a new user</a>
+                <a id="register-new-user" asp-controller="User" asp-area="Main" asp-action="Register">Register as a new user</a>
             </p>
         </div>
     </form>
