--- a/TwinsArtstyle/wwwroot/css/Layout.css
+++ b/TwinsArtstyle/wwwroot/css/Layout.css
@@ -1,25 +1,25 @@
 @import "colors.css";
 
-*{
+* {
     margin: 0;
     padding: 0;
-    -webkit-user-select: none;  /* Chrome all / Safari all */
-    -moz-user-select: none;     /* Firefox all */
-    -ms-user-select: none;      /* IE 10+ */
-    user-select: none;    
+    -webkit-user-select: none; /* Chrome all / Safari all */
+    -moz-user-select: none; /* Firefox all */
+    -ms-user-select: none; /* IE 10+ */
+    user-select: none;
 }
 
-body{
+body {
     position: relative;
     background-color: var(--blue);
     min-height: 100vh;
 }
 
-.content-wrapper{
-   padding-bottom: 200px;
+.content-wrapper {
+    padding-bottom: 200px;
 }
 
-.top-navigation-bar{
+.top-navigation-bar {
     background-color: var(--light-blue);
     padding-bottom: 8px;
     box-shadow: 0 1px 8px var(--nav-bar-shadow-color);
@@ -29,30 +29,30 @@ body{
     width: 100%;
 }
 
-.top-list-container{
+.top-list-container {
     list-style-type: none;
     display: flex;
     justify-content: space-between;
     align-items: center;
 }
 
-#top-icon{
-   width: 100px;
-   height: 100px;
+#top-icon {
+    width: 100px;
+    height: 100px;
 }
 
-#top-icon:hover{
-    cursor: pointer;
-}
+    #top-icon:hover {
+        cursor: pointer;
+    }
 
-#top-heading{
+#top-heading {
     color: white;
     font-family: 'Sansita Swashed', cursive;
     font-size: 50px;
     letter-spacing: 6px;
 }
 
-.top-cart-button{
+.top-cart-button {
     border-radius: 15px;
     border-style: none;
     background-color: var(--blue);
@@ -64,37 +64,37 @@ body{
     right: 50px;
 }
 
-.top-cart-button:hover{
-    cursor: pointer;
-}
+    .top-cart-button:hover {
+        cursor: pointer;
+    }
 
-#top-cart-icon{
+#top-cart-icon {
     width: 20px;
     height: 20px;
 }
 
-#top-cart{
+#top-cart {
     display: inline;
     position: relative;
     left: 4px;
     font-family: 'Courier New', Courier, monospace;
 }
 
-.categories{
+.categories {
     background-color: var(--light-blue);
 }
 
-#categories-container{
+#categories-container {
     display: flex;
     list-style: none;
 }
 
-.category-item{
+.category-item {
     padding: 15px;
     border-left: 1px solid #333;
 }
 
-.category{
+.category {
     padding: 4px;
     text-decoration: none;
     color: #333;
@@ -104,24 +104,24 @@ body{
     border-radius: 8px;
 }
 
-.category:hover{
-    color: white;
-}
+    .category:hover {
+        color: white;
+    }
 
-footer{
+footer {
     position: absolute;
     bottom: 0;
     width: 100%;
-    height:110px;
+    height: 110px;
     background-color: var(--light-blue);
 }
 
-#bottom-nav-bar{
+#bottom-nav-bar {
     height: 100%;
     box-shadow: 0 -1px 6px var(--nav-bar-shadow-color);
 }
 
-.bottom-list-container{
+.bottom-list-container {
     display: flex;
     justify-content: space-around;
     align-items: center;
@@ -129,29 +129,30 @@ footer{
     height: 100%;
 }
 
-.bottom-link{
+.bottom-link {
     text-decoration: none;
     font-size: 25px;
     font-family: 'Sansita Swashed', cursive;
     color: white;
 }
 
-.bottom-link:hover{
-    color: #346E75;
-}
+    .bottom-link:hover {
+        color: #346E75;
+    }
 
 .animate-background-color {
     transition: background-color 0.5s;
 }
-.animate-background-color:hover {
-    background-color: var(--dark-blue-green);
-}
 
-.menu-sidebar{
+    .animate-background-color:hover {
+        background-color: var(--dark-blue-green);
+    }
+
+.menu-sidebar {
     display: none;
 }
 
-.dropdown.active .menu-sidebar{
+.dropdown.active .menu-sidebar {
     position: absolute;
     display: flex;
     flex-direction: column;
@@ -159,18 +160,19 @@ footer{
     background-color: var(--dark-blue-green);
     gap: 5px;
     height: 500px;
-    width: 250px;
+    width: 300px;
 }
 
-.menu-item{
+.menu-item {
     padding: 3px 6px;
     border-top: 1.4px solid #333;
     text-align: center;
 }
-
 .menu-item > a, #hello-message{
     font-family: 'Courier New', Courier, monospace;
     font-size: 30px;
     text-decoration: none;
-    color: white;
+    color: white;  
+    max-width: 250px;
+    word-wrap: break-word;
 }
