Removed the admin login and instead added 2 roles - User and Administrator. If an user is in the Administrator role, he is gonna be able to access the Admin area.

--- a/TwinsArtstyle/Areas/Main/Views/Shared/_SidebarPartial.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/Shared/_SidebarPartial.cshtml
@@ -1,5 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
 @using TwinsArtstyle.Infrastructure.Models
+@using TwinsArtstyle.Services.Constants
 @inject SignInManager<User> SignInManager
 @inject UserManager<User> UserManager
 
@@ -8,6 +9,12 @@
     <div class="menu-item">
         <span id="hello-message">Hello, @User.Claims.Where(c => c.Type == "Full Name").FirstOrDefault().Value</span>
     </div>
+    @if (User.IsInRole(RoleType.Admininstrator))
+    {
+        <div class="menu-item">
+            <a asp-area="Admin" asp-action="Index" asp-controller="Home" id="admin-panel">Admin Panel</a>
+        </div>
+    }
     <div class="menu-item">
         <a href="#">My Profile</a>
     </div>
