--- a/TwinsArtstyle/wwwroot/css/admin.css
+++ b/TwinsArtstyle/wwwroot/css/admin.css
@@ -1,5 +1,7 @@
 .text-danger{
     color: red;
+    font-size: 20px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
 }
 
 .form-card{
