--- a/TwinsArtstyle/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/TwinsArtstyle/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -6,11 +6,29 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="~/css/admin_Layout.css">
     <link rel="stylesheet" href="~/css/admin.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
+    <link href="https://fonts.googleapis.com/css2?family=Sansita+Swashed:wght@300&family=Space+Mono&display=swap" rel="stylesheet">
     <title>@ViewData["Title"]</title>
 </head>
 <body>
     <div class="header-container">
         <h1>Admin</h1>
+        <div class="admin-menu">
+            <div class="orders border-right">
+                <i class="bi bi-basket-fill icon"></i>
+                <span class="nav-text">Orders</span>
+                <i class="bi bi-arrow-down-short icon"></i>
+            </div>
+            <div class="inbox border-right">
+                <i class="bi bi-inbox-fill icon"></i>
+                <span class="nav-text">Inbox</span>
+                <i class="bi bi-arrow-down-short icon"></i>
+            </div>
+            <div class="profile">
+                <i class="bi bi-person-fill icon" id="profile-icon"></i>
+                <span id="admin-profile" class="nav-text">@User.Identity.Name</span>
+            </div>
+        </div>
     </div>
 
     <div class="content-wrapper">
@@ -18,7 +36,6 @@
     </div>
 
     <div class="footer-container">
-
     </div>
 </body>
 </html>
