Added a Message entity and a migration for the change and applied the migration to the database.

--- a/TwinsArtstyle/wwwroot/css/admin_Layout.css
+++ b/TwinsArtstyle/wwwroot/css/admin_Layout.css
@@ -9,6 +9,10 @@
     user-select: none;
 }
 
+a{
+    text-decoration: none;
+}
+
 html, body{
     height: 100vh;
 }
@@ -43,6 +47,10 @@ h1{
     padding: 7px;
     margin-right: 6px;
     border-radius: 4px;
+}
+
+.top-nav-item{
+    padding: 0px 5px;
 }
 
 .pointer-cursor:hover{
