--- a/TwinsArtstyle/Areas/Admin/Views/Shared/_Layout.cshtml
+++ b/TwinsArtstyle/Areas/Admin/Views/Shared/_Layout.cshtml
@@ -14,17 +14,25 @@
     <div class="header-container">
         <h1>Admin</h1>
         <div class="admin-menu">
-            <div class="orders border-right pointer-cursor">
+            <div class="top-nav-item border-right pointer-cursor">
+                <a asp-area="Main" asp-controller="User" asp-action="Logout" class="nav-text">Log Out</a>
+                <i class="bi bi-door-open-fill icon"></i>
+            </div>
+            <div class="top-nav-item border-right pointer-cursor">
+                <a asp-area="Main" asp-controller="Home" asp-action="Index" class="nav-text">Home</a>
+                <i class="bi bi-house-door-fill icon"></i>
+            </div>
+            <div class="top-nav-item border-right pointer-cursor">
                 <i class="bi bi-basket-fill icon"></i>
                 <span class="nav-text">Orders</span>
                 <i class="bi bi-arrow-down-short icon"></i>
             </div>
-            <div class="inbox border-right pointer-cursor">
+            <div class="top-nav-item border-right pointer-cursor">
                 <i class="bi bi-inbox-fill icon"></i>
                 <span class="nav-text">Inbox</span>
                 <i class="bi bi-arrow-down-short icon"></i>
             </div>
-            <div class="profile pointer-cursor">
+            <div class="top-nav-item pointer-cursor">
                 <i class="bi bi-person-fill icon" id="profile-icon"></i>
                 <span id="admin-profile" class="nav-text">@User.Identity.Name</span>
             </div>
@@ -32,10 +40,19 @@
     </div>
     <div class="left-menu-bar">
         <div class="item">
+            <span class="left-nav-text pointer-cursor">Info</span>
+        </div>
+        <div class="item">
+            <span class="left-nav-text pointer-cursor">Products</span>
+        </div>
+        <div class="item">
             <span class="left-nav-text pointer-cursor">Users</span>
         </div>
         <div class="item">
             <span class="left-nav-text pointer-cursor">Orders</span>
+        </div>
+        <div class="item">
+            <span class="left-nav-text pointer-cursor">Inbox</span>
         </div>
         <div class="item">
             <span class="left-nav-text pointer-cursor">Manage Roles</span>
