--- a/TwinsArtstyle/Areas/Main/Views/Shared/_SidebarPartial.cshtml
+++ b/TwinsArtstyle/Areas/Main/Views/Shared/_SidebarPartial.cshtml
@@ -13,7 +13,7 @@
     @if (User.IsInRole(RoleType.Admininstrator))
     {
         <div class="menu-item">
-            <a asp-area="Admin" asp-action="Index" asp-controller="Home" id="admin-panel">Admin Panel</a>
+            <a asp-area="Admin" asp-action="Info" asp-controller="Home" id="admin-panel">Admin Panel</a>
         </div>
     }
 
